# CHomP3R

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  NOTICE  README.md
chomp/: CMakeLists.txt
chomp/chomp/algebra/: algebra.hpp  algebra.test.cpp  cyclic.hpp  cyclic.test.cpp  modules.hpp  modules.test.cpp
chomp/chomp/complexes/: complexes.hpp  cubical.hpp  cubical.test.cpp  grading.hpp  grading.test.cpp
chomp/chomp/modules/: concepts.hpp  concepts.test.cpp  modules.hpp  modules.test.cpp  rings.hpp  rings.test.cpp
chomp/chomp/util/: cache.hpp  cache.test.cpp  concepts.hpp  concepts.test.cpp  constants.hpp  iterators.hpp  iterators.test.cpp
tools/: build_test.sh  lint.sh
